Double Scroll Bug on New Student Done

--- a/cd2024bfs4g1-frontend/src/main/ngx/src/app/main/students/students-new/students-new.component.css
+++ b/cd2024bfs4g1-frontend/src/main/ngx/src/app/main/students/students-new/students-new.component.css
@@ -5,6 +5,7 @@ o-form {
   padding: 25px;
   border-radius: 15px;
   max-width: 65%;
+  max-height: 94%;
   margin: 0 auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
